fix(main.css): fix color of article-title in dark mode
This commit is a fixup for 50033089b31b3849c38352c6be9c3e980abebece

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -509,7 +509,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
         background-color: #333;
     }
 
-    a[href].link-item, body {
+    a[href], body {
         color: #ddd;
     }
 
